force-app/main/default/objects/NHS_API_Config__c/NHS_API_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NHS API Config</label>
</CustomObject>