force-app/main/default/objects/NHS_API_Config__c/fields/Airparser_API_Key__c.field-meta.xml
<CustomField>
    <fullName>Airparser_API_Key__c</fullName>
    <label>Airparser API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>