force-app/main/default/objects/NHS_API_Config__c/fields/Airparser_Inbox_Id__c.field-meta.xml
<CustomField>
    <fullName>Airparser_Inbox_Id__c</fullName>
    <label>Airparser Inbox ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>