force-app/main/default/objects/NHS_API_Config__c/fields/Final_Checks_Email_Template_Timeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Final_Checks_Email_Template_Timeline_Id__c</fullName>
    <description>Salesforce EmailTemplate Id used to pre-populate the Final Checks stage email when the housebuilder uses the Timeline valuation model (e.g. Wain Homes). Separate from Final_Checks_Email_Template_Id__c which handles the standard 3-figure model.</description>
    <label>Final Checks Email Template Timeline Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>