force-app/main/default/objects/NHS_API_Config__c/fields/Health_Check_Interval_Hours__c.field-meta.xml
<CustomField>
    <fullName>Health_Check_Interval_Hours__c</fullName>
    <defaultValue>6</defaultValue>
    <label>Health Check Interval (Hours)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>