force-app/main/default/objects/NHS_API_Config__c/fields/Ideal_Postcodes_Key__c.field-meta.xml
<CustomField>
    <fullName>Ideal_Postcodes_Key__c</fullName>
    <label>Ideal Postcodes Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>