force-app/main/default/objects/NHS_API_Config__c/fields/Last_Health_Check__c.field-meta.xml
<CustomField>
    <fullName>Last_Health_Check__c</fullName>
    <label>Last Health Check</label>
    <type>DateTime</type>
</CustomField>