force-app/main/default/objects/NHS_API_Config__c/fields/Map_Provider__c.field-meta.xml
<CustomField>
    <fullName>Map_Provider__c</fullName>
    <description>Preferred map provider: Auto, Mapbox, or Google Maps. Auto falls back on quota hit.</description>
    <label>Map Provider</label>
    <length>20</length>
    <type>Text</type>
    <defaultValue>"Auto"</defaultValue>
</CustomField>