force-app/main/default/objects/NHS_API_Config__c/fields/Mapbox_Daily_Limit__c.field-meta.xml
<CustomField>
    <fullName>Mapbox_Daily_Limit__c</fullName>
    <description>Soft daily cap for Mapbox map loads. Free tier = 50k/month (~1600/day).</description>
    <label>Mapbox Daily Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>1500</defaultValue>
</CustomField>