force-app/main/default/objects/NHS_API_Config__c/fields/Mapbox_Last_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Mapbox_Last_Reset_Date__c</fullName>
    <description>Date the Mapbox counter was last reset.</description>
    <label>Mapbox Last Reset Date</label>
    <type>Date</type>
</CustomField>