force-app/main/default/objects/NHS_API_Config__c/fields/Mapbox_Public_Token__c.field-meta.xml
<CustomField>
    <fullName>Mapbox_Public_Token__c</fullName>
    <description>Mapbox public access token (pk.xxx). URL-restrict in Mapbox dashboard.</description>
    <label>Mapbox Public Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>