force-app/main/default/objects/NHS_API_Config__c/fields/Mapbox_Requests_Today__c.field-meta.xml
<CustomField>
    <fullName>Mapbox_Requests_Today__c</fullName>
    <description>Counter for today's Mapbox map loads. Auto-resets daily.</description>
    <label>Mapbox Requests Today</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>