force-app/main/default/objects/NHS_API_Config__c/fields/RapidAPI_Key__c.field-meta.xml
<CustomField>
    <fullName>RapidAPI_Key__c</fullName>
    <label>RapidAPI Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>