force-app/main/default/objects/NHS_API_Config__c/fields/Street_Data_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Street_Data_Endpoint__c</fullName>
    <defaultValue>"https://api.data.street.co.uk/street-data-api/v2/"</defaultValue>
    <label>Street Data Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>