force-app/main/default/objects/NHS_API_Config__c/fields/TinyURL_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>TinyURL_Endpoint__c</fullName>
    <defaultValue>"http://tinyurl.com/api-create.php"</defaultValue>
    <label>TinyURL Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>